# https-server-sim

./: .gitignore  CMakeLists.txt  缺少项分析.md
.claude/agents/: architectural-designer.md  architecture-document-reviewer.md  cpp-code-inspector.md  cpp-module-implementer.md  detailed-design-document-reviewer.md  module-detail-designer.md
codes/: CMakeLists.txt
codes/core/: CMakeLists.txt  core_dummy.cpp  test_main.cpp
codes/core/callback/: CMakeLists.txt
codes/core/callback/include/callback/: callback.h  callback.hpp  callback_strategy.hpp  client_context.h  client_context.hpp
codes/core/callback/source/: callback.cpp  callback_strategy.cpp
codes/core/callback/test/: CMakeLists.txt  test_callback.cpp
codes/core/config/: CMakeLists.txt
codes/core/config/include/config/: config.hpp
codes/core/config/source/: config.cpp
codes/core/config/test/: CMakeLists.txt  test_config.cpp
codes/core/connection/: CMakeLists.txt
codes/core/connection/include/connection/: connection.hpp  connection_manager.hpp
codes/core/connection/source/: connection.cpp  connection_manager.cpp
codes/core/connection/test/: CMakeLists.txt  test_connection.cpp
codes/core/debug_chain/: CMakeLists.txt
codes/core/debug_chain/include/debug_chain/: debug_chain.hpp  debug_config.hpp  debug_context.hpp  debug_handler.hpp
codes/core/debug_chain/source/: debug_chain.cpp
codes/core/debug_chain/test/: CMakeLists.txt  test_debugchain.cpp
codes/core/msg_center/: CMakeLists.txt
codes/core/msg_center/include/msg_center/: event.hpp  event_loop.hpp  event_queue.hpp  io_thread.hpp  msg_center.hpp  worker_pool.hpp
codes/core/msg_center/source/: event.cpp  event_loop.cpp  event_queue.cpp  io_thread.cpp  msg_center.cpp  worker_pool.cpp
codes/core/msg_center/test/: CMakeLists.txt  test_msg_center.cpp  test_msgcenter.cpp
codes/core/protocol/: CMakeLists.txt
codes/core/protocol/include/protocol/: config_converter.hpp  hpack.hpp  http2_stream.hpp  http_message.hpp  http_parser.hpp  protocol.hpp  protocol_factory.hpp  protocol_handler.hpp  protocol_handler_factory.hpp  protocol_types.hpp  protocol_utils.hpp  tls_handler.hpp
codes/core/protocol/source/: config_converter.cpp  hpack.cpp  http2_stream.cpp  http_message.cpp  http_parser.cpp  protocol_handler.cpp  protocol_handler_factory.cpp  tls_handler.cpp
codes/core/protocol/test/: CMakeLists.txt  test_protocol.cpp
codes/core/server/: CMakeLists.txt
codes/core/server/include/server/: server.hpp
codes/core/server/source/: server.cpp
codes/core/server/test/: CMakeLists.txt  test_server.cpp
codes/core/test/: CMakeLists.txt  core_unit_test_main.cpp  start_test_client.py
codes/core/test/integration_tests/: CMakeLists.txt  integration_test_main.cpp  test_basic_requests.cpp  test_callback_and_more.cpp  test_client_disconnect.cpp  test_connection_manager.cpp  test_debug_chain.cpp  test_event_flow.cpp  test_fixture.hpp  test_http.cpp  test_performance.cpp  test_server_startup.cpp  test_stress.cpp  test_tls.cpp
codes/core/test/sim_client/: __init__.py  client.py  config.py  example_config.json  example_debug_config.json  scenario.py
codes/core/utils/: CMakeLists.txt
codes/core/utils/include/utils/: buffer.hpp  config.hpp  error.hpp  lockfree_queue.hpp  logger.hpp  statistics.hpp  time.hpp
codes/core/utils/source/: buffer.cpp  config.cpp  error.cpp  logger.cpp  statistics.cpp  time.cpp
codes/core/utils/test/: CMakeLists.txt  test_utils.cpp
codes/scripts/: README.md  build.py  build.sh
codes/scripts/toolchains/: linux-gcc.cmake  macos-clang.cmake  mingw-w64.cmake
docs/.ai/develop/: 检视意见报告-Callback-第10版.md  检视意见报告-Callback-第11版.md  检视意见报告-Callback-第1版.md  检视意见报告-Callback-第2版.md  检视意见报告-Callback-第3版.md  检视意见报告-Callback-第4版.md  检视意见报告-Callback-第5版.md  检视意见报告-Callback-第6版.md  检视意见报告-Callback-第7版.md  检视意见报告-Callback-第8版.md  检视意见报告-Callback-第9版.md  检视意见报告-Connection-第1版.md  检视意见报告-Connection-第2版.md  检视意见报告-Connection-第3版.md  检视意见报告-Connection-第4版.md  检视意见报告-Connection-第5版.md  检视意见报告-Connection-第6版.md  检视意见报告-Connection-第7版.md  检视意见报告-Connection-第8版.md  检视意见报告-Connection-第9版.md  检视意见报告-DebugChain-第10版.md  检视意见报告-DebugChain-第1版.md  检视意见报告-DebugChain-第2版.md  检视意见报告-DebugChain-第3版.md  检视意见报告-DebugChain-第4版.md  检视意见报告-DebugChain-第5版.md  检视意见报告-DebugChain-第6版.md  检视意见报告-DebugChain-第7版.md  检视意见报告-DebugChain-第8版.md  检视意见报告-DebugChain-第9版.md  检视意见报告-MsgCenter-第10版.md  检视意见报告-MsgCenter-第11版.md  检视意见报告-MsgCenter-第12版.md  检视意见报告-MsgCenter-第13版.md  检视意见报告-MsgCenter-第14版.md  检视意见报告-MsgCenter-第15版.md  检视意见报告-MsgCenter-第1版.md  检视意见报告-MsgCenter-第2版.md  检视意见报告-MsgCenter-第3版.md  检视意见报告-MsgCenter-第4版.md  (+53 more)
docs/.ai/hld/: 架构设计检视意见-第4版.md
docs/.ai/lld/: 检视意见报告-Callback-第2版.md  检视意见报告-DebugChain-第1版.md  检视意见报告-DebugChain-第2版.md  检视意见报告-MsgCenter-第2版.md  检视意见报告-MsgCenter-第4版.md  检视意见报告-Protocol-第1版.md  检视意见报告-Protocol-第2版.md  检视意见报告-Protocol-第3版.md  检视意见报告-Server-第2版.md  检视意见报告-Server-第4版.md  检视意见报告-Utils-第1版.md  检视意见报告-Utils-第2版.md  检视意见报告-Utils-第3版.md  模块联调设计-检视意见-第13版.md  模块联调设计-检视意见-第14版.md  模块联调设计-检视意见-第15版.md  模块联调设计-检视意见-第16版.md  模块联调设计-检视意见-第17版.md  模块联调设计-检视意见-第2版.md  模块联调设计-检视意见-第4版.md  模块联调设计-检视意见-第6版.md  模块联调设计-检视意见-第7版.md  模块联调设计-检视意见-第8版.md  模块联调设计-检视意见-第9版.md  模块联调设计-第13版.md
docs/.ai/lld/core/: 检视意见报告-Callback-第1版.md  检视意见报告-Connection-第1版.md  检视意见报告-Connection-第2版.md  检视意见报告-MsgCenter-第1版.md  检视意见报告-MsgCenter-第3版.md  检视意见报告-MsgCenter-第5版.md  检视意见报告-Server-第1版.md  检视意见报告-Server-第3版.md  检视意见报告-Server-第5版.md  模块联调设计-检视意见-第10版.md  模块联调设计-检视意见-第11版.md  模块联调设计-检视意见-第12版.md  模块联调设计-检视意见-第1版.md  模块联调设计-检视意见-第3版.md  模块联调设计-检视意见-第5版.md  模块联调设计-第14版.md  模块联调设计-第15版.md  (+3 more)
docs/design/: hld-4+1视图.md  hld-工程设计.md  hld-架构设计文档.md  lld-详细设计文档-Callback.md  lld-详细设计文档-Connection.md  lld-详细设计文档-DebugChain.md  lld-详细设计文档-MsgCenter.md  lld-详细设计文档-Protocol.md  lld-详细设计文档-Server.md  lld-详细设计文档-Utils.md  lld-集成测试用例设计文档.md  srs-需求分析文档.md  srs-需求文档.md
docs/design/modules/: module-callback.md  module-connection.md  module-debugchain.md  module-msgcenter.md  module-protocol.md  module-server.md  module-utils.md
docs/user_guide/prepare/: for_mac.md  for_windows.md
(+6 files in other folders)
